Fix issue where could not click first tab when LHN is closed due to DOM node overlap.

--- a/src/main/webapp/css/index.css
+++ b/src/main/webapp/css/index.css
@@ -411,6 +411,7 @@ span.selected-count {
 }
 .navbar-custom .navbar-brand {
     color: #ffffff;
+    height: 40px;
     line-height: 40px;
     font-size: 16px;
     padding: 0 12px;
